@@ -2,6 +2,7 @@
 
 	* effect.h:
 	* effect.cpp: Add missing const modifier.
+	Remove nattrib argument from DrawVertices.
 
 2010-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
